--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,6 @@ logging:
 utils:
   email:
     enabled: false
-file:
-  dir: C:\Users\Administrator\Desktop\a
+nas:
+  ffmpeg-bin-dir: G:\ffmpeg-4.1.3-win64-static\bin
+  out-dir: F:\tmpq
