--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,4 +9,4 @@ utils:
 nas:
   ffmpeg-bin-dir: G:\ffmpeg-4.1.3-win64-static\bin
   out-dir: F:\tmpq
-  aria2c-dir: C:\Users\Administrator\Desktop
+  aria2c-dir: G:\
