--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,29 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <version>2.2.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>top.itning.yunshu</groupId>
     <artifactId>yunshu-nas</artifactId>
-    <version>1.1.1.RELEASE</version>
+    <version>1.1.2.RELEASE</version>
     <name>yunshu-nas</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Yun Shu Nas Project</description>
+    <url>https://github.com/itning/yunshu-nas</url>
+    <licenses>
+        <license>
+            <name>Apache License</name>
+            <url>https://github.com/itning/yunshu-nas/blob/master/LICENSE</url>
+        </license>
+    </licenses>
 
     <properties>
         <java.version>1.8</java.version>
+        <itning.utils.version>1.0.1-RELEASE</itning.utils.version>
+        <typebuilder.version>1.0</typebuilder.version>
+        <commons-io.version>2.6</commons-io.version>
+        <guava.version>28.2-jre</guava.version>
+        <java-webSocket.version>1.4.0</java-webSocket.version>
     </properties>
 
     <dependencies>
@@ -57,25 +69,25 @@
         <dependency>
             <groupId>com.github.itning</groupId>
             <artifactId>utils-spring-boot-starter</artifactId>
-            <version>1.0.1-RELEASE</version>
+            <version>${itning.utils.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.6</version>
+            <version>${commons-io.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>28.0-jre</version>
+            <version>${guava.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket -->
         <dependency>
             <groupId>org.java-websocket</groupId>
             <artifactId>Java-WebSocket</artifactId>
-            <version>1.4.0</version>
+            <version>${java-webSocket.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
@@ -85,7 +97,7 @@
         <dependency>
             <groupId>com.github.ikidou</groupId>
             <artifactId>TypeBuilder</artifactId>
-            <version>1.0</version>
+            <version>${typebuilder.version}</version>
         </dependency>
 
         <dependency>
