--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,4 @@ utils:
 nas:
   ffmpeg-bin-dir: G:\ffmpeg-4.1.3-win64-static\bin
   out-dir: F:\tmpq
-  aria2c-file: G:\aria2c.exe
+  aria2c-file: G:\bin\aria2c.exe
