feat: add music

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,39 @@
 ##########################################################
 #
-#           ·şÎñÆ÷ÅäÖÃ
+#           æœåŠ¡å™¨é…ç½®
 #
 ##########################################################
-server.port=8766
+server.port=8888
 server.undertow.direct-buffers=true
+spring.application.name=yunshu-nas
+music.file-path=F:/music_yunshu
 ##########################################################
 #
-#           ÈÕÖ¾ÅäÖÃ
+#           JPAé…ç½®
+#
+##########################################################
+spring.datasource.url=jdbc:mysql://localhost:3306/yunshu_music?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&connectTimeout=0&serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+##########################################################
+#
+#           æ—¥å¿—é…ç½®
 #
 ##########################################################
 logging.level.top=debug
 ##########################################################
 #
-#           ¹¤¾ßÀàÅäÖÃ
+#           NASé…ç½®
 #
 ##########################################################
-utils.email.enabled=false
-##########################################################
-#
-#           NASÅäÖÃ
-#
-##########################################################
-# ffmpeg bin Ä¿Â¼Î»ÖÃ
+# ffmpeg bin ç›®å½•ä½ç½®
 nas.ffmpeg-bin-dir=G:/ffmpeg-4.1.3-win64-static/bin
-# ×ªÂëÄ¿Â¼Î»ÖÃ
+# è½¬ç ç›®å½•ä½ç½®
 nas.out-dir=F:/tmpq
-# aria2c.exe ÎÄ¼şÎ»ÖÃ
+# aria2c.exe æ–‡ä»¶ä½ç½®
 nas.aria2c-file=G:/bin/aria2c.exe
