--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,6 @@
 server.port=8888
 server.undertow.direct-buffers=true
 spring.application.name=yunshu-nas
-music.file-path=F:/music_yunshu
 ##########################################################
 #
 #           JPA配置
@@ -37,3 +36,5 @@ nas.ffmpeg-bin-dir=G:/ffmpeg-4.1.3-win64-static/bin
 nas.out-dir=F:/tmpq
 # aria2c.exe 文件位置
 nas.aria2c-file=G:/bin/aria2c.exe
+# 音乐文件目录
+nas.music-file-dir=F:/music_yunshu
