--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -38,3 +38,5 @@ nas.out-dir=F:/tmpq
 nas.aria2c-file=G:/bin/aria2c.exe
 # 音乐文件目录
 nas.music-file-dir=F:/music_yunshu
+# 歌词文件目录
+nas.lyric-file-dir=F:/lyric_yunshu
