chore: Add finalName

--- a/nas-deploy/pom.xml
+++ b/nas-deploy/pom.xml
@@ -27,7 +27,7 @@
     </dependencies>
 
     <build>
-        <finalName>${jarFileName}</finalName>
+        <finalName>yunshu-nas-${jarFileName}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
