feat: docker support

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.application.name=yunshu-nas
 #           JPA配置
 #
 ##########################################################
-spring.datasource.url=jdbc:mysql://localhost:3306/yunshu_music?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&connectTimeout=0&serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://mysql8:3306/yunshu_music?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&connectTimeout=0&serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
@@ -31,12 +31,12 @@ logging.level.top=debug
 #
 ##########################################################
 # ffmpeg bin 目录位置
-nas.ffmpeg-bin-dir=G:/ffmpeg-4.1.3-win64-static/bin
+nas.ffmpeg-bin-dir=/home/ffmpeg/bin
 # 转码目录位置
-nas.out-dir=F:/tmpq
-# aria2c.exe 文件位置
-nas.aria2c-file=G:/bin/aria2c.exe
+nas.out-dir=/home/tmp
+# aria2c.exe 文件位置 G:/bin/aria2c.exe
+nas.aria2c-file=
 # 音乐文件目录
-nas.music-file-dir=F:/music_yunshu
+nas.music-file-dir=/home/music_yunshu
 # 歌词文件目录
-nas.lyric-file-dir=F:/lyric_yunshu
+nas.lyric-file-dir=/home/lyric_yunshu
