feat: docker env support

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -11,10 +11,10 @@ spring.application.name=yunshu-nas
 #           JPA配置
 #
 ##########################################################
-spring.datasource.url=jdbc:mysql://mysql8:3306/yunshu_music?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&connectTimeout=0&serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${MYSQL_URL:localhost}:${MYSQL_PORT:3306}/yunshu_music?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&connectTimeout=0&serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
@@ -31,12 +31,12 @@ logging.level.top=debug
 #
 ##########################################################
 # ffmpeg bin 目录位置
-nas.ffmpeg-bin-dir=/home/ffmpeg/bin
+nas.ffmpeg-bin-dir=${NAS_FFMPEG_BIN_DIR:/home/ffmpeg/bin}
 # 转码目录位置
-nas.out-dir=/home/tmp
+nas.out-dir=${NAS_OUT_DIR:/home/tmp}
 # aria2c.exe 文件位置 G:/bin/aria2c.exe
-nas.aria2c-file=
+nas.aria2c-file=${NAS_ARIA2C_FILE:}
 # 音乐文件目录
-nas.music-file-dir=/home/music_yunshu
+nas.music-file-dir=${NAS_MUSIC_DIR:/home/music_yunshu}
 # 歌词文件目录
-nas.lyric-file-dir=/home/lyric_yunshu
+nas.lyric-file-dir=${NAS_LYRIC_DIR:/home/lyric_yunshu}
