feat: music meta info

--- a/nas-music/pom.xml
+++ b/nas-music/pom.xml
@@ -26,6 +26,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org/jaudiotagger -->
+        <dependency>
+            <groupId>org</groupId>
+            <artifactId>jaudiotagger</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
