--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,12 @@
                 <version>${mapstruct.version}</version>
                 <scope>compile</scope>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org/jaudiotagger -->
+            <dependency>
+                <groupId>org</groupId>
+                <artifactId>jaudiotagger</artifactId>
+                <version>2.0.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
