--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -40,3 +40,12 @@ nas.aria2c-file=${NAS_ARIA2C_FILE:}
 nas.music-file-dir=${NAS_MUSIC_DIR:/home/music_yunshu}
 # 歌词文件目录
 nas.lyric-file-dir=${NAS_LYRIC_DIR:/home/lyric_yunshu}
+##########################################################
+#
+#           认证配置
+#
+##########################################################
+nas.enable-basic-auth=false
+#nas.basic-auth-username=
+#nas.basic-auth-password=
+#nas.ignore-path=
