--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,13 @@
                 <artifactId>jaudiotagger</artifactId>
                 <version>2.0.3</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>1.15</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
