feat: 歌词数据源

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -49,3 +49,14 @@ nas.enable-basic-auth=false
 #nas.basic-auth-username=
 #nas.basic-auth-password=
 #nas.ignore-path=
+##########################################################
+#
+#           腾讯云数据源配置
+#
+##########################################################
+nas.enable-tencent-cos-data-source=false
+#nas.tencent-cos-secret-id=
+#nas.tencent-cos-secret-key=
+#nas.tencent-cos-region-name=
+#nas.tencent-cos-music-bucket-name=
+#nas.tencent-cos-lyric-bucket-name=
