--- a/nas-music/pom.xml
+++ b/nas-music/pom.xml
@@ -31,6 +31,11 @@
             <groupId>org</groupId>
             <artifactId>jaudiotagger</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.qcloud/cos_api -->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
