--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,12 @@
                 <artifactId>commons-codec</artifactId>
                 <version>1.15</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/com.qcloud/cos_api -->
+            <dependency>
+                <groupId>com.qcloud</groupId>
+                <artifactId>cos_api</artifactId>
+                <version>5.6.65</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
