feat: 封面数据源

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -60,3 +60,4 @@ nas.enable-tencent-cos-data-source=false
 #nas.tencent-cos-region-name=
 #nas.tencent-cos-music-bucket-name=
 #nas.tencent-cos-lyric-bucket-name=
+#nas.tencent-cos-cover-bucket-name=
