--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -58,6 +58,5 @@ nas.enable-tencent-cos-data-source=false
 #nas.tencent-cos-secret-id=
 #nas.tencent-cos-secret-key=
 #nas.tencent-cos-region-name=
-#nas.tencent-cos-music-bucket-name=
-#nas.tencent-cos-lyric-bucket-name=
-#nas.tencent-cos-cover-bucket-name=
+#nas.tencent-cos-bucket-name=
+#nas.tencent-cos-cdn-url=
