--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -51,10 +51,12 @@ nas.enable-basic-auth=false
 #nas.ignore-path=
 ##########################################################
 #
-#           腾讯云数据源配置
+#           数据源配置
 #
 ##########################################################
-nas.enable-tencent-cos-data-source=false
+#nas.enable-mixed-data-source=
+#nas.enable-tencent-cos-data-source=
+#nas.file-data-source-url-prefix=
 #nas.tencent-cos-secret-id=
 #nas.tencent-cos-secret-key=
 #nas.tencent-cos-region-name=
