feat: nas.server-url

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -6,6 +6,7 @@
 server.port=8888
 server.undertow.direct-buffers=true
 spring.application.name=yunshu-nas
+#nas.server-url=
 ##########################################################
 #
 #           JPA配置
