feat: add front-project

--- a/nas-front-end/angular.json
+++ b/nas-front-end/angular.json
@@ -57,6 +57,7 @@
           },
           "configurations": {
             "production": {
+              "index": "",
               "budgets": [
                 {
                   "type": "initial",
