--- a/nas-front-end/package.json
+++ b/nas-front-end/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --output-hashing none --output-path ../nas-deploy/src/main/resources/static",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
