--- a/nas-front-end/package.json
+++ b/nas-front-end/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "dayjs": "^1.11.3",
+    "dplayer": "^1.26.0",
     "js-base64": "^3.7.2",
     "music-metadata-browser": "^2.2.7",
     "ng-zorro-antd": "^13.3.2",
@@ -30,6 +31,7 @@
     "@angular-devkit/build-angular": "~13.3.8",
     "@angular/cli": "~13.3.8",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/dplayer": "^1.25.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
