--- a/nas-common/pom.xml
+++ b/nas-common/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>nas-common</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket -->
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
