feat: 下载与日志

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -6,7 +6,8 @@
 server.port=8888
 server.undertow.direct-buffers=true
 spring.application.name=yunshu-nas
-#nas.server-url=
+# 服务端地址
+nas.server-url=http://127.0.0.1:${server.port}
 ##########################################################
 #
 #           JPA配置
