feat: add Elasticsearch

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -64,3 +64,9 @@ nas.file-data-source.lyric-file-dir=/home/lyric_yunshu
 #nas.tencent-cos-data-source.cdn-url=
 #nas.backup-file-data-source.music-file-dir=
 #nas.backup-file-data-source.lyric-file-dir=
+##########################################################
+#
+#           ElasticSearch配置
+#
+##########################################################
+spring.data.elasticsearch.repositories.enabled=true
