--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -70,4 +70,4 @@ nas.file-data-source.lyric-file-dir=/home/lyric_yunshu
 #
 ##########################################################
 spring.data.elasticsearch.repositories.enabled=true
-spring.elasticsearch.uris=http://192l.168.31.222:9000
+spring.elasticsearch.uris=http://192.168.31.222:9200
