feat: allow not using elasticsearch

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -69,5 +69,5 @@ nas.file-data-source.lyric-file-dir=/home/lyric_yunshu
 #           ElasticSearch配置
 #
 ##########################################################
-spring.data.elasticsearch.repositories.enabled=true
-spring.elasticsearch.uris=http://192.168.31.222:9200
+spring.data.elasticsearch.repositories.enabled=${ENABLED_ELASTICSEARCH:true}
+spring.elasticsearch.uris=${ELASTICSEARCH_URI}
