feat: change default to false

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -69,5 +69,5 @@ nas.file-data-source.lyric-file-dir=/home/lyric_yunshu
 #           ElasticSearch配置
 #
 ##########################################################
-spring.data.elasticsearch.repositories.enabled=${ENABLED_ELASTICSEARCH:true}
+spring.data.elasticsearch.repositories.enabled=${ENABLED_ELASTICSEARCH:false}
 spring.elasticsearch.uris=${ELASTICSEARCH_URI}
