feat: change default to false

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -70,4 +70,4 @@ nas.file-data-source.lyric-file-dir=/home/lyric_yunshu
 #
 ##########################################################
 spring.data.elasticsearch.repositories.enabled=${ENABLED_ELASTICSEARCH:false}
-spring.elasticsearch.uris=${ELASTICSEARCH_URI}
+spring.elasticsearch.uris=${ELASTICSEARCH_URI:http://localhost:9200}
