--- a/nas-music/pom.xml
+++ b/nas-music/pom.xml
@@ -29,6 +29,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.32</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org/jaudiotagger -->
         <dependency>
