--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -7,17 +7,17 @@ server.port=8888
 server.undertow.direct-buffers=true
 spring.application.name=yunshu-nas
 # 服务端地址
-nas.server-url=http://127.0.0.1:${server.port}
+nas.server-url=http://192.168.31.222:${server.port}
 ##########################################################
 #
 #           JPA配置
 #
 ##########################################################
-spring.datasource.url=jdbc:mysql://${MYSQL_URL:localhost}:${MYSQL_PORT:3306}/yunshu_music?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&connectTimeout=0&serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${MYSQL_USERNAME:root}
-spring.datasource.password=${MYSQL_PASSWORD:root}
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:sqlite:test.db
+spring.datasource.driverClassName=org.sqlite.JDBC
+#spring.datasource.username=${MYSQL_USERNAME:root}
+#spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
@@ -39,9 +39,9 @@ nas.out-dir=/home/tmp
 # aria2c.exe 文件位置 G:/bin/aria2c.exe
 nas.aria2c-file=
 # 音乐文件目录
-nas.file-data-source.music-file-dir=/home/music_yunshu
+nas.file-data-source.music-file-dir=E:\\app\\Audio\\music_yunshu
 # 歌词文件目录
-nas.file-data-source.lyric-file-dir=/home/lyric_yunshu
+nas.file-data-source.lyric-file-dir=E:\\app\\Audio\\lyric_yunshu
 ##########################################################
 #
 #           认证配置
@@ -56,18 +56,18 @@ nas.file-data-source.lyric-file-dir=/home/lyric_yunshu
 #
 ##########################################################
 #nas.enable-mixed-data-source=
-#nas.file-data-source.url-prefix=
+nas.file-data-source.url-prefix=http://192.168.31.222
 #nas.tencent-cos-data-source.secret-id=
 #nas.tencent-cos-data-source.secret-key=
 #nas.tencent-cos-data-source.region-name=
 #nas.tencent-cos-data-source.bucket-name=
 #nas.tencent-cos-data-source.cdn-url=
-#nas.backup-file-data-source.music-file-dir=
-#nas.backup-file-data-source.lyric-file-dir=
+nas.backup-file-data-source.music-file-dir=G:\\Audio\\music_yunshu
+nas.backup-file-data-source.lyric-file-dir=G:\\Audio\\lyric_yunshu
 ##########################################################
 #
 #           ElasticSearch配置
 #
 ##########################################################
-spring.data.elasticsearch.repositories.enabled=${ENABLED_ELASTICSEARCH:false}
+spring.data.elasticsearch.repositories.enabled=false
 spring.elasticsearch.uris=${ELASTICSEARCH_URI:http://localhost:9200}
