--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -13,7 +13,7 @@ nas.server-url=http://192.168.31.222:${server.port}
 #           JPA配置
 #
 ##########################################################
-spring.datasource.url=jdbc:sqlite:test.db
+spring.datasource.url=jdbc:sqlite:yunshu-nas.sqlite.db
 spring.datasource.driverClassName=org.sqlite.JDBC
 #spring.datasource.username=${MYSQL_USERNAME:root}
 #spring.datasource.password=${MYSQL_PASSWORD:root}
