--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -39,9 +39,9 @@ nas.out-dir=/home/tmp
 # aria2c.exe 文件位置 G:/bin/aria2c.exe
 nas.aria2c-file=
 # 音乐文件目录
-nas.file-data-source.music-file-dir=E:\\app\\Audio\\music_yunshu
+nas.file-data-source.music-file-dir=D:\\app\\Audio\\music_yunshu
 # 歌词文件目录
-nas.file-data-source.lyric-file-dir=E:\\app\\Audio\\lyric_yunshu
+nas.file-data-source.lyric-file-dir=D:\\app\\Audio\\lyric_yunshu
 ##########################################################
 #
 #           认证配置
@@ -56,14 +56,14 @@ nas.file-data-source.lyric-file-dir=E:\\app\\Audio\\lyric_yunshu
 #
 ##########################################################
 #nas.enable-mixed-data-source=
-nas.file-data-source.url-prefix=http://192.168.31.222
+nas.file-data-source.url-prefix=http://192.168.31.222:${server.port}
 #nas.tencent-cos-data-source.secret-id=
 #nas.tencent-cos-data-source.secret-key=
 #nas.tencent-cos-data-source.region-name=
 #nas.tencent-cos-data-source.bucket-name=
 #nas.tencent-cos-data-source.cdn-url=
-nas.backup-file-data-source.music-file-dir=G:\\Audio\\music_yunshu
-nas.backup-file-data-source.lyric-file-dir=G:\\Audio\\lyric_yunshu
+nas.backup-file-data-source.music-file-dir=F:\\Audio\\music_yunshu
+nas.backup-file-data-source.lyric-file-dir=F:\\Audio\\lyric_yunshu
 ##########################################################
 #
 #           ElasticSearch配置
